--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </canvas>
     <script type="module">
       import { uni_test } from './js/samples/uni_test.mjs';
-      //import { uni_tex } from './js/samples/uni_tex.mjs';
+      import { uni_radiance_cascades } from './js/samples/uni_radiance_cascades.mjs';
       import { uni_control } from './js/samples/uni_control.mjs';
     </script>
     
